# lky-avatar

./: .env.example  .gitignore  README.md  conftest.py  plan.md  pyproject.toml
assets/avatar-source/: README.md
assets/persona/: lky_facts.md
assets/voices/: README.md
docs/: GOAL.md  HANDOFF.md  avatar-art-brief.md  avatar-portrait-prompts.md  design-interview-studio.md  eval-process.md  faq.md  lky-avatar-plan.md  spec.md  style-feasibility-rig.md  voice-blind-test.md
docs/evals/: timetravel-verdict.md
docs/reports/: baseline-benchmark.md  hosting-decision.md  implementation-report.md  interaction-gate.md  serving-upgrade.md  style-feasibility-verdict.md  tts-finetuned-integration.md  voice-blind-test-results.md
evals/: benchmark_prompts.json  fact_grounding_questions.json  sample_session_trace.jsonl  timetravel_questions.json
evals/results/: barge_in_probe_c612208.json  timetravel_A.json  (+13 more)
lky_avatar/: __init__.py  persona.py
scripts/: barge_in_probe.py  benchmark_brain.py  benchmark_serving_http.py  benchmark_tts_placement.py  blind_shuffle.py  blind_test_synthesize.py  brain_20turn_check.py  check_persona_parity.py  fetch_placeholder_model.py  prepare_voice_reference.py  run_timetravel_eval.py  run_timetravel_eval_http.py  score_blind_test.py  transcribe_voice_refs.py
tests/: test_benchmark_brain.py  test_blind_shuffle.py  test_blind_test_synthesize.py  test_eval_cli.py  test_fact_grounding_eval.py  test_persona.py  test_prepare_voice_reference.py  test_score_blind_test.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+87 files in other folders)
